Creating objects with Constructor